# langchain-demo

./: .env.example  .gitignore  README.md  agent_demo.py  llm_client.py  main.py  pyproject.toml
01_Start/: 00_Openai_API_Demo.py  01_Langchain_Demo.py  02_Langchain_Openai_Chat_Demo.py
02_Document_QA_Server/: DocQA.py  DocQA_v2.py
03_Model_IO/: 01_Model_IO.py  02_Model_IO_Loop_Call.py  03_OpenAI_IO.py  04_Model_IO_HuggingFace.py  05_Model_IO_Parse_Output.py  flowers_with_descriptions.csv
04_Prompt_Template_1/: 00_Import_Templates.py  01_Prompt_Template.py  02_Chat_Prompt_Template.py  03_Few_Shot_Prompt.py
05_Prompt_Template_2/: CoT.py
05_Promtp_Template_2/: CoT.py
06_Model_Call/: 01_HugggingFace_Deepseek.py  01_HuggingFace_Deepseek.py  02_Langchain_HFHub.py
07_Output_Parser/: 01_Pydantic_Parser.py
langchain_learn/: __init__.py  llm_client.py
