[project]
name = "langchain-learn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "numpy>=2.4.1",
    "openai>=2.24.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_learn"]
