[project]
name = "langchain-learn"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.18",
    "docx2txt>=0.9",
    "flask>=3.1.3",
    "langchain>=1.3.1",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.1",
    "openai>=2.24.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.18.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_learn"]
